# pico-turret-pio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  stepper.pio
include/: core1.h  fsm.h  global.h  pid_controller.h  speed_profile.h  stepper.h  uart.h
src/: core1.c  fsm.c  pid_controller.c  speed_profile.c  stepper.c  uart.c
